--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -8,8 +8,9 @@
 name: Gradle Package
 
 on:
+  workflow_dispatch:
   release:
-    types: [created,workflow_dispatch]
+    types: [created]
 
 jobs:
   build:
